2.0.0b12
 - feat: add button to copy Quick View statistics to clipboard
2.0.0b11
 - fix: imported polygon filters did not immediately show up in
   Quick View
 - fix: polygon filters were not stored correctly in log mode
 - fix: several issues related to contour plots, contour spacing,
   and log-scales
 - fix: subclass MDSubWindow and catch closeEvent (#29)
 - enh+docs: make Young's modulus computation more user convenient and
   update the section in the docs
 - docs: finish first draft of documentation
2.0.0b10
 - fix: fluorescence label for y axis not updated with custom value
 - fix: fluorescence label of colorbar not updated with custom value 
 - fix: set correct plotting range in log mode
 - fix: always normalize density for KDE plots
 - fix: plots sometimes loaded in wrong order into session
 - enh: improve Block Matrix size adjustment
 - enh: pretty-print log scale axes tick labels
   (https://github.com/pyqtgraph/pyqtgraph/pull/1097)
 - enh: add single-color-colormaps for labeling
2.0.0b9
 - try to figure out #29
2.0.0b8
 - feat: automatically set parameters for Young's modulus computation
2.0.0b7
 - fix: try to disable close buttons of MDI subwindows on macOS (#29)
 - fix: allow Shift+click on plot matrix element
 - fix: support temperature key (dclab 0.19.1.post2)
2.0.0b6
 - ref: move custom widgets to separate submodule (#24)
 - fix: bad alignment when selecting "Plot" in QuickView (#31)
2.0.0b5
 - fix: correctly handle empty plots (#27)
 - fix: version check checked against version 1 (#30)
 - fix: QuickView window resize incorrect (partly #31)
2.0.0b4
 - feat: add automated update checker
 - feat: show basic statistics in QuickView (#13)
 - fix: modifying a polygon filter did not update the plots (#26)
 - ref: refactor BlockMatrix (#10)
2.0.0b3
 - enh: introduce FilterRay class for caching of hierarchy data (#6)
 - fix: minor plot updating issues
 - fix: QuickView issues when removing datasets (#25)
2.0.0b2